# deFi-bet-market

./: Dockerfile  README.md  pyproject.toml
contracts/: PredictionMarket.sol
frontend/: index.html
scripts/: deploy.py
src/: api.py  config.py  market.py
tests/: test_market.py
